--- a/src/app/_graph-api-error.component.html
+++ b/src/app/_graph-api-error.component.html
@@ -5,13 +5,13 @@
         <em>{{graphApiError.msg}}</em><br>
     </p>
     <div class='app-snackbar-actions'>
-        <button md-button color='primary' (click)='reload()'>
+        <button mat-button color='primary' (click)='reload()'>
             Seite neu laden
-            <md-icon>refresh</md-icon>
+            <mat-icon>refresh</mat-icon>
         </button>
-        <button md-button (click)='mdSnackBarRef.dismiss()'>
+        <button mat-button (click)='matSnackBarRef.dismiss()'>
             Fehler ignorieren
-            <md-icon>cancel</md-icon>
+            <mat-icon>cancel</mat-icon>
         </button>
     </div>
 </div>
