--- a/src/app/_missing-feature.component.html
+++ b/src/app/_missing-feature.component.html
@@ -1,17 +1,17 @@
 <!-- HTML template for the MissingFeatureComponent -->
 <div class='flex'>
-    <md-card>
-        <md-card-header>
-            <md-card-title>Fehlendes Feature</md-card-title>
-            <md-card-subtitle>Hier entsteht etwas neues</md-card-subtitle>
-            <img md-card-avatar src='favicon.ico'>
-        </md-card-header>
-        <md-card-content>
+    <mat-card>
+        <mat-card-header>
+            <mat-card-title>Fehlendes Feature</mat-card-title>
+            <mat-card-subtitle>Hier entsteht etwas neues</mat-card-subtitle>
+            <img mat-card-avatar src='favicon.ico'>
+        </mat-card-header>
+        <mat-card-content>
             <p>
                 Dieses Feature haben wir leider noch nicht fertig bekommen, 
                 aber wir arbeiten daran, bitte habe noch etwas Geduld.<!--
             --></p>
-        </md-card-content>
-    </md-card>
+        </mat-card-content>
+    </mat-card>
 </div>
 
