--- a/src/app/aside/_comments.component.html
+++ b/src/app/aside/_comments.component.html
@@ -1,4 +1,4 @@
 <!-- HTML template for the CommentsComponent -->
 <comment *ngFor='let comment of _comments' [comment]='comment'></comment>
-<md-spinner color='accent' *ngIf='!_loaded'></md-spinner>
+<mat-spinner color='accent' *ngIf='!_loaded'></mat-spinner>
 
