--- a/src/app/main/_not-found.component.html
+++ b/src/app/main/_not-found.component.html
@@ -1,29 +1,29 @@
 <!-- HTML template for the NotFoundComponent -->
-<md-card>
-    <md-card-header>
-        <md-card-title>Fehlerhafter Link</md-card-title>
-        <md-card-subtitle>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>Fehlerhafter Link</mat-card-title>
+        <mat-card-subtitle>
             Die Seite kann nicht gefunden werden
-        </md-card-subtitle>
-        <img md-card-avatar src='favicon.ico'>
-    </md-card-header>
-    <md-card-content>
+        </mat-card-subtitle>
+        <img mat-card-avatar src='favicon.ico'>
+    </mat-card-header>
+    <mat-card-content>
         <p>
             Bitte überprüfe den Link, mit dem du auf diese Seite 
             gekommen bist.  Wenn du diese Seite über einen Knopf in 
             der App erreicht hast, wende dich bitte an unser 
             Supportteam, damit wir das Problem beheben können.<!--
         --></p>
-    </md-card-content>
-    <md-card-actions>
-        <a md-button (click)='location.back()'>
+    </mat-card-content>
+    <mat-card-actions>
+        <a mat-button (click)='location.back()'>
             Zurück
-            <md-icon>arrow_back</md-icon>
+            <mat-icon>arrow_back</mat-icon>
         </a>
-        <a md-button color='primary' [appLink]='null'>
+        <a mat-button color='primary' [appLink]='null'>
             Dashboard
-            <md-icon>dashboard</md-icon>
+            <mat-icon>dashboard</mat-icon>
         </a>
-    </md-card-actions>
-</md-card>
+    </mat-card-actions>
+</mat-card>
 
