--- a/src/app/aside/_comment.component.html
+++ b/src/app/aside/_comment.component.html
@@ -1,22 +1,22 @@
 <!-- HTML template for the CommentComponent -->
 <profile-card [profile]='_comment.from'>
-    <div *ngIf='_comment.attachment' md-card-image>
+    <div *ngIf='_comment.attachment' mat-card-image>
         <a *ngIf='!video' [href]='_comment.attachment.url' target='_blank'>
-            <img md-card-image [src]='_comment.attachment.media.image.src'>
+            <img mat-card-image [src]='_comment.attachment.media.image.src'>
         </a>
         <video
                 *ngIf='video'
-                md-card-image
+                mat-card-image
                 controls
                 preload='metadata'
                 [poster]='_comment.attachment.media.image.src'>
             <source [src]='video.source'>
         </video>
     </div>
-    <md-card-content *ngIf='_comment.message'>
+    <mat-card-content *ngIf='_comment.message'>
         <p>{{_comment.message}}</p>
-    </md-card-content>
-    <md-card-content *ngIf='comments.length'>
+    </mat-card-content>
+    <mat-card-content *ngIf='comments.length'>
         <blockquote *ngFor='let comment of comments'>
             <p>
                 <a [appLink]='utilService.profileLink(comment.from.id)'>
@@ -26,12 +26,12 @@
                 </a>
                 <a
                         *ngIf='comment.attachment'
-                        md-button
+                        mat-button
                         color='accent'
                         class='app-icon-button'
                         [href]='comment.attachment.url'
                         target='_blank'>
-                    <md-icon>attachment</md-icon>
+                    <mat-icon>attachment</mat-icon>
                 </a>
                 <span *ngIf='comment.message'>
                     <br>
@@ -39,30 +39,47 @@
                 </span>
             </p>
         </blockquote>
-    </md-card-content>
-    <md-card-content *ngIf='!_loaded'>
-        <md-spinner color='accent'></md-spinner>
-    </md-card-content>
-    <md-card-footer>
+    </mat-card-content>
+    <mat-card-content *ngIf='!_loaded'>
+        <mat-spinner color='accent'></mat-spinner>
+    </mat-card-content>
+    <mat-card-actions>
+        <a
+                mat-button
+                href='//facebook.com/{{_comment.id}}'
+                target='_blank'>
+            Facebook öffnen
+            <mat-icon>open_in_browser</mat-icon>
+        </a>
+        <button
+                mat-button
+                color='primary'
+                [disabled]='(params | async).profile === _comment.from.id'
+                [appLink]='utilService.profileLink(_comment.from.id)'>
+            Profil zeigen
+            <mat-icon>account_box</mat-icon>
+        </button>
+    </mat-card-actions>
+    <mat-card-footer>
         <div>
             <p>
                 <span
-                        [mdTooltip]='_comment.likeTooltip'
-                        mdTooltipShowDelay='1500'
-                        mdTooltipHideDelay='1500'>
+                        [matTooltip]='_comment.likeTooltip'
+                        matTooltipShowDelay='1500'
+                        matTooltipHideDelay='1500'>
                     <span class='text-primary'>
-                        <md-icon>thumb_up</md-icon>
+                        <mat-icon>thumb_up</mat-icon>
                     </span>
                     <span class='text-accent'>
                         <strong>{{_comment.like_count}}</strong>
                     </span>
                 </span>
                 <span
-                        [mdTooltip]='_comment.replyTooltip'
-                        mdTooltipShowDelay='1500'
-                        mdTooltipHideDelay='1500'>
+                        [matTooltip]='_comment.replyTooltip'
+                        matTooltipShowDelay='1500'
+                        matTooltipHideDelay='1500'>
                     <span class='text-primary'>
-                        <md-icon>reply</md-icon>
+                        <mat-icon>reply</mat-icon>
                     </span>
                     <span class='text-accent'>
                         <strong>{{_comment.comment_count}}</strong>
@@ -70,23 +87,6 @@
                 </span>
             </p>
         </div>
-    </md-card-footer>
-    <md-card-actions>
-        <a
-                md-button
-                href='//facebook.com/{{_comment.id}}'
-                target='_blank'>
-            Facebook öffnen
-            <md-icon>open_in_browser</md-icon>
-        </a>
-        <button
-                md-button
-                color='primary'
-                [disabled]='(params | async).profile === _comment.from.id'
-                [appLink]='utilService.profileLink(_comment.from.id)'>
-            Profil zeigen
-            <md-icon>account_box</md-icon>
-        </button>
-    </md-card-actions>
+    </mat-card-footer>
 </profile-card>
 
