--- a/src/app/nav/_pages.component.html
+++ b/src/app/nav/_pages.component.html
@@ -1,11 +1,11 @@
 <!-- HTML template for the PagesComponent -->
-<md-spinner color='accent' *ngIf='!loaded'></md-spinner>
-<md-nav-list>
+<mat-spinner color='accent' *ngIf='!loaded'></mat-spinner>
+<mat-nav-list>
     <a
-            md-list-item
+            mat-list-item
             *ngFor='let page of pages'
             [appLink]='{profile: page.id}'>
         {{page.name}}
     </a>
-</md-nav-list>
+</mat-nav-list>
 
