--- a/src/app/_insight.component.html
+++ b/src/app/_insight.component.html
@@ -3,19 +3,27 @@
     <mat-table [dataSource]='insight'>
         <ng-container matColumnDef='description'>
             <mat-header-cell *matHeaderCellDef></mat-header-cell>
-            <mat-cell *matCellDef='let metric'>{{metric.description}}</mat-cell>
+            <mat-cell *matCellDef='let metric'>
+                {{metric.description}}
+            </mat-cell>
         </ng-container>
         <ng-container matColumnDef='day'>
             <mat-header-cell *matHeaderCellDef>Gestern</mat-header-cell>
-            <mat-cell *matCellDef='let metric'>{{metric.day}}</mat-cell>
+            <mat-cell *matCellDef='let metric'>
+                {{metric.day || '-'}}
+            </mat-cell>
         </ng-container>
         <ng-container matColumnDef='week'>
             <mat-header-cell *matHeaderCellDef>7&nbsp;Tage</mat-header-cell>
-            <mat-cell *matCellDef='let metric'>{{metric.week}}</mat-cell>
+            <mat-cell *matCellDef='let metric'>
+                {{metric.week || '-'}}
+            </mat-cell>
         </ng-container>
         <ng-container matColumnDef='days_28'>
             <mat-header-cell *matHeaderCellDef>28&nbsp;Tage</mat-header-cell>
-            <mat-cell *matCellDef='let metric'>{{metric.days_28}}</mat-cell>
+            <mat-cell *matCellDef='let metric'>
+                {{metric.days_28 || '-'}}
+            </mat-cell>
         </ng-container>
         <mat-header-row *matHeaderRowDef='displayedColumns'></mat-header-row>
         <mat-row *matRowDef='let row; columns: displayedColumns;'></mat-row>
